--- a/index.html
+++ b/index.html
@@ -2,353 +2,18 @@
 <html>
      <head>
           <meta charset="utf-8">
-          <title>BGBU RMR</title>
-          <link rel="stylesheet" href="compiled\flipclock.css">
-          <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-          <link rel="stylesheet" href="styles.css">
-          <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
-          <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-          <script src="compiled\flipclock.js"></script>
-          <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-
-          <!-- <link rel='stylesheet prefetch' href='https://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css'> -->
-
-          <link rel="stylesheet" href="style.css">
+          <title></title>
      </head>
      <body>
-          <nav class="navbar navbar-inverse navbar-fixed-top">
-            <div class="container-fluid">
-              <div class="navbar-header">
-                <a class="navbar-brand" href="#">BGBU Resource Management Review</a>
-              </div>
-              <ul class="nav navbar-nav navbar-right">
-                   <li><a href="#">HOME</a></li>
-                   <li><a href="#timeline1">SCHEDULE</a></li>
-                   <li><a href="#">SPEAKERS</a></li>
-                   <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-                   <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-              </ul>
-            </div>
-          </nav>
+          <h1>The Benefits of Geothermal Energy</h1>
+          <p>
+               The debates around renewable sources of energy have been going on at least a decade. After more than a century of relying on fossil fuels almost entirely, changing this paradigm in favor of the renewable energy sources may seem difficult and unjustified for some people. However, the situation when fossil fuel was the most efficient and the cheapest source of energy has been left far in the past; nowadays, it is obvious that using oil or gas is not only expensive, but also causes tremendous damage to the planet we live on. Many countries such as Germany or Sweden have already made significant efforts to fix this situation, employing numerous power plants working on the renewable sources of energy; the most effective among these sources is geothermal energy. Using it has a number of benefits which should be considered by governments globally.
 
-          <div id="myCarousel" class="carousel slide" data-ride="carousel">
-            <!-- Indicators -->
-            <ol class="carousel-indicators">
-              <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-              <li data-target="#myCarousel" data-slide-to="1"></li>
-              <li data-target="#myCarousel" data-slide-to="2"></li>
-              <li data-target="#myCarousel" data-slide-to="3"></li>
-            </ol>
+Geothermal energy—and in particular, the prices of it—does not depend on the world’s economic and political situation as strongly as fossil fuels do. Besides, extracting and transporting fossil fuel adds up to the price of energy produced from it. In its turn, geothermal energy is much cheaper than conventional ones, involving low-running costs and saving up to 80% of costs over fossil fuels (CEF).
+Environmental friendliness is another benefit of geothermal energy. Being a renewable source, it definitely produces less waste and pollution than conventional energy sources; the exact indexes, however, depend on the systems used for producing geothermal energy.In so-called open-loop geothermal systems, carbon dioxide makes up about 10% of air emissions; an even smaller percentage of emissions is methane. Overall, open-loop geothermal systems produce 0.1 pounds of carbon dioxide and other harmful gases per kilowatt-hour of the energy produced. In closed-loop systems, the greenhouse gases are not released into the atmosphere, although a relatively small amount of such emissions can be produced during a geothermal power plant’s construction. For a comparison, a power plant producing electricity from gas releases up to 2 pounds of carbon dioxide per kilowatt-hour into the atmosphere, and those power plants that work on coal produce an astonishing 3.6 pounds of greenhouse gases per kilowatt-hour of energy produced. As it can be seen, even less advanced open-loop geothermal systems are much cleaner and safer for ecology than the power plants working on conventional energy sources (UCS).
+Low maintenance costs make yet another reason why using geothermal power plants should be a priority for many countries. Geothermal heat pump systems require 25% to 50% less energy for work compared to the conventional systems for heating or cooling.Besides, geothermal equipment is less bulky, so it requires less space: due to the very nature of geothermal energy (which is extracted from the bowels of the planet), geothermal power plants have only a few moving parts, all of which can be easily sheltered inside a relatively small building. This is not to mention that the life span of geothermal equipment is rather long: up to 50 years for pipes, and up to 20 years for pumps (GreenMatch). All this makes geothermal power stations easy to build and maintain.
+As it can be seen, using geothermal energy is more effective than energy produced from conventional sources of energy. Geothermal energy is cheaper, less harmful for the environment, and power plants producing it are easier to build and maintain. These factors make geothermal energy a reasonable and effective alternative to energy produced from fossil fuels, so the governments of the world should consider converting their industries to work on geothermal energy.
 
-            <!-- Wrapper for slides -->
-            <div class="carousel-inner">
-
-              <div class="item active">
-                <img src="images/geox.jpg" alt="Event Page">
-                <div class="carousel-caption" style="top:50%; transform: translateY(-50%);">
-                  <h3>BGBU</h3>
-                  <h1>RESOURCE MANAGEMENT REVIEW</h1>
-                  <h3>DECEMBER 5-6, 2017</h3>
-                  <p></p>
-                </div>
-              </div>
-
-              <div class="item" >
-                <img src="images/geochem.jpg" alt="Geochem">
-                <div class="carousel-caption">
-                  <h3>GEOCHEMISTRY</h3>
-                  <p></p>
-                </div>
-              </div>
-
-              <div class="item">
-                <img src="images/res_eng.jpg" alt="Res Eng">
-                <div class="carousel-caption">
-                  <h3>RESERVOIR ENGINEERING</h3>
-                  <p></p>
-                </div>
-              </div>
-
-              <div class="item">
-                <img src="images/well_testx.png" alt="Well Test">
-                <div class="carousel-caption">
-                  <h3>WELL TEST AND MEASUREMENT</h3>
-                  <p></p>
-                </div>
-              </div>
-
-            </div>
-
-            <!-- Left and right controls -->
-            <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-              <span class="glyphicon glyphicon-chevron-left"></span>
-              <span class="sr-only">Previous</span>
-            </a>
-            <a class="right carousel-control" href="#myCarousel" data-slide="next">
-              <span class="glyphicon glyphicon-chevron-right"></span>
-              <span class="sr-only">Next</span>
-            </a>
-          </div>
-
-
-          <div class="jumbotron" style="padding-top: 40px">
-               <div class="container" style="text-align:center;">
-                    <h2 class='text'>COUNTDOWN BEFORE THE MEETING:</h2>
-
-                    <div class="clock" style="display:inline-block; margin:2em; width:auto;"></div>
-                    <!-- <div class="message">Sample Message</div> -->
-                    <script type="text/javascript">
-                       var clock;
-
-                       $(document).ready(function() {
-                            var clock;
-                            var d1 = new Date();
-                            var d2 = new Date('2017-12-05 08:00:00');
-                            var d3 = (d2-d1)/1000;
-
-                            clock = $('.clock').FlipClock({
-                              clockFace: 'DailyCounter',
-                              autoStart: false,
-                              callbacks: {
-                                 stop: function() {
-                                      $('.message').html('The clock has stopped!')
-                                 }
-                              }
-                           });
-                           clock.setTime(d3);
-                           clock.setCountdown(true);
-                           clock.start();
-
-                       });
-                    </script>
-
-               <!-- <p></p>
-          <p>Bootstrap is the most popular HTML, CSS, and JS framework for developing
-          responsive, mobile-first projects on the web.</p> -->
-               </div>
-          </div>
-
-<!-- SCHEDULE -->
-<div class="container" id='timeline1'>
-  <div class="page-header">
-    <h1 id="timeline">SCHEDULE</h1>
-    <h3 id="timeline">December 5, 2017 (Day 1)</h3>
-  </div>
-  <ul class="timeline">
-    <li>
-      <div class="timeline-badge"><i class="glyphicon glyphicon-credit-card"></i></div>
-      <div class="timeline-panel">
-        <div class="timeline-heading">
-          <h4 class="timeline-title">Power Plant / FCRS Update</h4>
-          <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 9:00 to 9:45 am December 5, 2017</small></p>
-          <p><small class="text-muted"><i class="glyphicon glyphicon-user"></i> RO Alamer / LS Mendiola</small></p>
-        </div>
-        <div class="timeline-body">
-          <p></p>
-        </div>
-      </div>
-    </li>
-
-<!-- GEOCHEM -->
-    <li class="timeline-inverted">
-      <div class="timeline-panel" style='background-color: #ffffff; border-color:#ffffff'>
-        <div class="timeline-heading ">
-          <h3 class="timeline-title"><em>Geochemistry / Geology</em></h3>
-        </div>
-      </div>
-    </li>
-
-    <li class="timeline-inverted">
-      <div class="timeline-badge warning"><i class="glyphicon glyphicon-credit-card"></i></div>
-      <div class="timeline-panel">
-        <div class="timeline-heading">
-          <h4 class="timeline-title">Reservoir Geochemistry and NDS Tracer Update</h4>
-        </div>
-        <div class="timeline-body">
-             <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 9:45 to 10:30 am December 5, 2017</small></p>
-             <p><small class="text-muted"><i class="glyphicon glyphicon-user"></i> CMR Espartinez </small></p>
-        </div>
-      </div>
-    </li>
-
-    <li class="timeline-inverted">
-      <div class="timeline-badge warning"><i class="glyphicon glyphicon-credit-card"></i></div>
-      <div class="timeline-panel">
-        <div class="timeline-heading">
-          <h4 class="timeline-title">A Structural Perspective on the NDS Tracer Test in BGBU</h4>
-        </div>
-        <div class="timeline-body">
-             <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i>10:30 to 11:15 am December 5, 2017</small></p>
-             <p><small class="text-muted"><i class="glyphicon glyphicon-user"></i> KD Lagamayo / JJT Dimabayao </small></p>
-        </div>
-      </div>
-    </li>
-
-    <li class="timeline-inverted">
-      <div class="timeline-badge warning"><i class="glyphicon glyphicon-credit-card"></i></div>
-      <div class="timeline-panel">
-        <div class="timeline-heading">
-          <h4 class="timeline-title">CN-3D Geochemistry Update</h4>
-        </div>
-        <div class="timeline-body">
-            <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 11:15 to 12:00 nn December 5, 2017 </small></p>
-            <p><small class="text-muted"><i class="glyphicon glyphicon-user"></i> PB Alvarado</small></p>
-        </div>
-      </div>
-    </li>
-    <!-- <li class="timeline-inverted">
-      <div class="timeline-badge warning"><i class="glyphicon glyphicon-credit-card"></i></div>
-      <div class="timeline-panel">
-        <div class="timeline-heading">
-          <h4 class="timeline-title">Process Geochemistry Update</h4>
-        </div>
-        <div class="timeline-body">
-            <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 11:15 to 12:00 nn December 5, 2017</small></p>
-            <p><small class="text-muted"><i class="glyphicon glyphicon-user"></i> MM Bibon </small></p>
-        </div>
-      </div>
-    </li> -->
-
-<!-- RESERVOIR ENGINEERING  -->
-    <li class="timeline-badge">
-      <div class="timeline-panel" style='background-color: #ffffff; border-color:#ffffff'>
-        <div class="timeline-heading ">
-          <h3 class="timeline-title"><em>Reservoir Engineering</em></h3>
-        </div>
-      </div>
-    </li>
-    <li>
-      <div class="timeline-badge info"><i class="glyphicon glyphicon-home"></i></div>
-      <div class="timeline-panel">
-        <div class="timeline-heading">
-          <h4 class="timeline-title">Bacman Steam and Injection Capacity Update</h4>
-        </div>
-        <div class="timeline-body">
-             <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 1:00 to 2:00 pm December 5, 2017</small></p>
-             <p><small class="text-muted"><i class="glyphicon glyphicon-user"></i> DB Gamez </small></p>
-        </div>
-      </div>
-    </li>
-
-<!-- Bacman-1.5 -->
-   <li class="timeline-inverted">
-     <div class="timeline-panel" style='background-color: #ffffff; border-color:#ffffff'>
-       <div class="timeline-heading ">
-         <h3 class="timeline-title"><em>BacMan 1.5</em></h3>
-       </div>
-     </div>
-   </li>
-
-   <li class="timeline-inverted">
-     <div class="timeline-badge warning"><i class="glyphicon glyphicon-credit-card"></i></div>
-     <div class="timeline-panel">
-       <div class="timeline-heading">
-         <h4 class="timeline-title">Bacman 1.5 Project Update</h4>
-       </div>
-       <div class="timeline-body">
-            <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 2:00 to 3:00 pm December 5, 2017</small></p>
-            <p><small class="text-muted"><i class="glyphicon glyphicon-user"></i> KD Garcia </small></p>
-       </div>
-     </div>
-   </li>
-
-  </ul>
-</div>
-
-<!-- DAY 2 -->
-<div class="container">
-  <div class="page-header">
-    <h3 id="timeline">December 6, 2017 (Day 2)</h3>
-  </div>
-
-<!-- BACMAN 1.5 -->
-  <ul class="timeline">
-     <li class="timeline-badge">
-          <div class="timeline-panel" style='background-color: #ffffff; border-color:#ffffff'>
-               <div class="timeline-heading ">
-                    <h3 class="timeline-title"><em>BacMan 1.5</em></h3>
-               </div>
-          </div>
-     </li>
-    <li>
-      <div class="timeline-badge success"><i class="glyphicon glyphicon-credit-card"></i></div>
-      <div class="timeline-panel">
-        <div class="timeline-heading">
-          <h4 class="timeline-title">Silica Screening Test for BacMan 1.5 and Process Geochemistry Update</h4>
-          <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 9:00 to 9:45 am December 6, 2017</small></p>
-          <p><small class="text-muted"><i class="glyphicon glyphicon-user"></i> MM Bibon </small></p>
-        </div>
-        <div class="timeline-body">
-          <p></p>
-        </div>
-      </div>
-    </li>
-    <li>
-      <div class="timeline-badge success"><i class="glyphicon glyphicon-credit-card"></i></div>
-      <div class="timeline-panel">
-        <div class="timeline-heading">
-          <h4 class="timeline-title">Binary Evaluation Support (Geothermex Engagement) </h4>
-          <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 9:45 to 10:30 am December 6, 2017</small></p>
-          <p><small class="text-muted"><i class="glyphicon glyphicon-user"></i> DMR Sunga </small></p>
-        </div>
-        <div class="timeline-body">
-          <p></p>
-        </div>
-      </div>
-    </li>
-
-<!-- WELL TEST AND MEASUREMENT -->
-    <li class="timeline-inverted">
-     <div class="timeline-panel" style='background-color: #ffffff; border-color:#ffffff'>
-        <div class="timeline-heading ">
-          <h3 class="timeline-title"><em>Well Test and Measurement</em></h3>
-        </div>
-     </div>
-    </li>
-    <li class="timeline-inverted">
-     <div class="timeline-badge success"><i class="glyphicon glyphicon-credit-card"></i></div>
-     <div class="timeline-panel">
-        <div class="timeline-heading">
-          <h4 class="timeline-title">BOM Automation Project</h4>
-        </div>
-        <div class="timeline-body">
-             <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 10:30 to 11:15 am December 6, 2017</small></p>
-             <p><small class="text-muted"><i class="glyphicon glyphicon-user"></i> GS Vergara / NM Avila</small></p>
-        </div>
-     </div>
-    </li>
-
-<!-- Reservoir Simulation -->
-     <li class="timeline-badge">
-          <div class="timeline-panel" style='background-color: #ffffff; border-color:#ffffff'>
-               <div class="timeline-heading ">
-                    <h3 class="timeline-title"><em>Reservoir Simulation</em></h3>
-               </div>
-          </div>
-     </li>
-    <li>
-      <div class="timeline-badge info"><i class="glyphicon glyphicon-home"></i></div>
-      <div class="timeline-panel">
-        <div class="timeline-heading">
-          <h4 class="timeline-title">Bacman Reservoir Simulation Update</h4>
-        </div>
-        <div class="timeline-body">
-            <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 11:15 to 12:00 nn December 6, 2017</small></p>
-            <p><small class="text-muted"><i class="glyphicon glyphicon-user"></i> JD Villacorte / RN Colina </small></p>
-        </div>
-      </div>
-    </li>
-
-  </ul>
-</div>
-<!-- END of SCHEDULE -->
-
-          <!-- <nav class="navbar navbar-inverse navbar-bottom">
-               <div class="container-fluid" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%)">
-                    <div class="navbar-header" >
-                         <p style="color:white;">All Rights Reserved</p>
-                    </div>
-               </div>
-          </nav> -->
+          </p>
      </body>
 </html>
